# VersionedCMakeTemplate

./: LICENSE
VersionedCMakeTemplate/: CMakeLists.txt  Makefile
VersionedCMakeTemplate/include/: utils.hpp
VersionedCMakeTemplate/src/: utils.cpp
VersionedCMakeTemplate/test/: CMakeLists.txt
VersionedCMakeTemplate/test/src/: main.cpp
scripts/: generateHeader.py  getVersion.sh  issue.sh
